写好了启动界面和登录界面

--- a/app/src/main/res/drawable/qq_ima_selector.xml
+++ b/app/src/main/res/drawable/qq_ima_selector.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    
+    <item android:drawable="@drawable/login_qq" android:state_pressed="true"/>
+    <item android:drawable="@drawable/login_qq_p"/>
 
-</shape>
+</selector>
