--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
+    <FrameLayout
+        android:background="@drawable/startpage"
+        android:id="@+id/fra_global"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
 </LinearLayout>
