--- a/app/src/main/res/drawable/phone_button_unselector.xml
+++ b/app/src/main/res/drawable/phone_button_unselector.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <corners android:radius="100dp"/>
-    <solid android:color="@color/white"/>
+    <solid android:color="#F4F4F4"/>
 
 
 
