--- a/app/src/main/res/drawable/wechat_button_selector.xml
+++ b/app/src/main/res/drawable/wechat_button_selector.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="100dp"/>
+    <solid android:color="#57FFFFFF"/>
+    <stroke android:width="1px" android:color="#FBFBFB"/>
+</shape>
