--- a/app/src/main/res/drawable/dialogfragment_login_phone.xml
+++ b/app/src/main/res/drawable/dialogfragment_login_phone.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:drawable="@color/dialogFragment_pre"
+        android:state_pressed="true"/>
+
+    <item android:drawable="@color/white" />
+
+
+
 </selector>
