--- a/app/src/main/res/drawable/dialogfragment_phone.xml
+++ b/app/src/main/res/drawable/dialogfragment_phone.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <solid android:color="@color/white"/>
+    <padding android:top="10px" android:bottom="10px"/>
+    <corners android:radius="65px"/>
+    <stroke android:width="1px" android:color="#00FF0000"/>
+
+</shape>
