--- a/app/src/main/res/layout/dialogfragment_loginphone.xml
+++ b/app/src/main/res/layout/dialogfragment_loginphone.xml
@@ -1,6 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/dialogfragment_phone"
+    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_marginTop="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/cancel_window"
+            android:clickable="true"
+            android:layout_width="14dp"
+            android:layout_height="23dp"
+            android:layout_marginLeft="22dp"
+            android:src="@drawable/exit"
+            android:focusable="true" />
+
+        <TextView
+            android:textStyle="bold"
+            android:textSize="16dp"
+            android:textColor="#000000"
+            android:layout_marginLeft="11dp"
+            android:padding="1dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="选择国家和地区" />
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/countryRegion"/>
+
+
+
+
+
+</LinearLayout>
