--- a/app/src/main/res/layout/phone_password.xml
+++ b/app/src/main/res/layout/phone_password.xml
@@ -1,6 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_marginTop="38dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/pp_topLeft"
+            android:layout_width="17dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/exit" />
+        <TextView
+            android:textColor="@color/black"
+            android:layout_marginLeft="20dp"
+            android:textSize="17dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_phone"/>
+    </LinearLayout>
+
+    <EditText
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="70dp"
+        android:id="@+id/phone_password_edit"
+        android:inputType="number"
+        android:textColorHint="#CCCCCC"
+        android:hint="请输入密码"
+        android:textCursorDrawable="@drawable/edit_cursor_color"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+
+    <View
+    android:layout_marginTop="7dp"
+    android:layout_marginRight="30dp"
+    android:layout_marginLeft="30dp"
+    android:layout_width="match_parent"
+    android:layout_height="2px"
+    android:background="#CCCCCC"/>
+
+    <Button
+    android:id="@+id/login"
+    android:textColor="@color/white"
+    android:text="登录"
+    android:layout_width="315dp"
+    android:layout_height="40dp"
+    android:background="@drawable/phone_loginbutton_shape"
+    android:layout_gravity="center"
+    android:layout_marginTop="43dp"/>
+
+
+
+</LinearLayout>
+
+
+
+
+
