--- a/app/src/main/res/drawable/phone_password_login_shape.xml
+++ b/app/src/main/res/drawable/phone_password_login_shape.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:drawable="@drawable/phone_password_login_selector"
+        android:state_pressed="true"/>
+    <item android:drawable="@drawable/phone_password_login_unselector"/>
+
+
 </selector>
