--- a/app/src/main/res/drawable/recommend_playlist_shape.xml
+++ b/app/src/main/res/drawable/recommend_playlist_shape.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#00FFFFFF"/>
-    <corners android:radius="100dp"/>
-    <stroke android:width="1px" android:color="#E5E5E5"/>
+
+    <corners
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
+        />
 
 </shape>
