--- a/app/src/main/res/layout/phone_password.xml
+++ b/app/src/main/res/layout/phone_password.xml
@@ -30,7 +30,7 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="70dp"
         android:id="@+id/phone_password_edit"
-        android:inputType="number"
+        android:inputType="textPassword"
         android:textColorHint="#CCCCCC"
         android:hint="请输入密码"
         android:textCursorDrawable="@drawable/edit_cursor_color"
@@ -56,6 +56,14 @@
     android:background="@drawable/phone_loginbutton_shape"
     android:layout_gravity="center"
     android:layout_marginTop="43dp"/>
+
+    <ProgressBar
+        android:id="@+id/login_proBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:indeterminateTint="#CCCCCC"/>
 
 
 
