--- a/app/src/main/res/drawable/sb_bar.xml
+++ b/app/src/main/res/drawable/sb_bar.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <!-- solid表示远的填充色 -->
+    <solid android:color="@color/white" />
+    <!-- stroke则代表远的边框线 -->
+    <stroke
+        android:width="1dp"
+        android:color="@color/white" />
+    <!-- size控制高宽 -->
+    <size
+        android:height="10dp"
+        android:width="10dp" />
+</shape>
