--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -13,14 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/start_layout"/>
-
 
         <LinearLayout
+            android:clickable="true"
             android:background="@color/white"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:focusable="true">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/home_page_toolbar"
         android:layout_marginTop="20dp"
@@ -28,6 +29,7 @@
         android:layout_height="wrap_content">
 
         <EditText
+            android:id="@+id/home_page_search_edit"
             android:singleLine="true"
             android:imeOptions="actionSearch"
             android:maxLines="1"
@@ -35,7 +37,7 @@
             android:gravity="center|left"
             android:drawablePadding="10dp"
             android:paddingLeft="10dp"
-            android:hint="陈奕迅"
+            android:hint="红岩yyds"
             android:background="@drawable/search_box_home_page"
             android:layout_gravity="center"
             android:layout_width="260dp"
@@ -55,6 +57,11 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+         <LinearLayout
+             android:id="@+id/home_page_song_lyrics"
+             android:layout_width="wrap_content"
+             android:layout_height="match_parent"
+             android:orientation="horizontal">
         <ImageView
             android:id="@+id/Home_page_song_po"
             android:layout_width="32dp"
@@ -80,6 +87,8 @@
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="10dp" />
+
+         </LinearLayout>
 
         <LinearLayout
            android:gravity="right"
@@ -115,6 +124,8 @@
         app:tabSelectedTextColor="#F27070"
         app:tabTextColor="#B3B3B3" />
         </LinearLayout>
+
+        <include layout="@layout/start_layout" />
     </androidx.drawerlayout.widget.DrawerLayout>
 
 </LinearLayout>
