--- a/app/src/main/res/layout/activity_lyrics.xml
+++ b/app/src/main/res/layout/activity_lyrics.xml
@@ -1,9 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background_1"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".activity.LyricsActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:gravity="center"
+        android:id="@+id/Lyrics_page_toolbar"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_marginLeft="20dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/lyrics_toolbar_imageview" />
+
+        <TextView
+            android:layout_marginLeft="20dp"
+            android:id="@+id/lyrics_toolbar_textView"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textSize="20dp"
+            android:textColor="@color/white"
+            android:layout_gravity="center"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"/>
+
+    </androidx.appcompat.widget.Toolbar>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:overScrollMode="never"
+        android:paddingTop="50dp"
+        android:id="@+id/Lyrics_rv"
+        android:layout_width="match_parent"
+        android:layout_weight="15"
+        android:layout_height="0dp"/>
+
+    <LinearLayout
+
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+       <LinearLayout
+            android:layout_marginTop="20dp"
+           android:gravity="center"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+
+           <TextView
+               android:gravity="center"
+               android:id="@+id/music_seekbar_time_1"
+               android:textColor="@color/white"
+               android:layout_gravity="center"
+               android:textSize="8dp"
+               android:layout_marginLeft="30dp"
+               android:layout_width="15dp"
+               android:layout_height="wrap_content"/>
+           <TextView
+
+               android:textColor="@color/white"
+               android:textSize="8dp"
+               android:gravity="center"
+               android:layout_width="5dp"
+               android:layout_height="wrap_content"
+               android:text=" : "/>
+           <TextView
+               android:gravity="center"
+               android:id="@+id/music_seekbar_time_2"
+               android:textColor="@color/white"
+               android:textSize="8dp"
+               android:layout_width="15dp"
+               android:layout_height="wrap_content" />
+
+           <SeekBar
+               android:paddingStart="0dp"
+               android:paddingEnd="0dp"
+               android:adjustViewBounds="true"
+               android:maxHeight="10dp"
+               android:minHeight="10dp"
+               android:thumbOffset="0dip"
+               android:id="@+id/music_seekbar"
+               android:paddingTop="4dp"
+               android:paddingBottom="4dp"
+               android:layout_width="230dp"
+               android:layout_marginRight="5dp"
+               android:layout_marginLeft="5dp"
+               android:progressDrawable="@drawable/music_progress_bar_shape"
+               android:layout_height="10dp"
+               android:thumb="@drawable/sb_bar"
+               android:visibility="visible" />
+
+           <TextView
+               android:gravity="center"
+               android:id="@+id/music_seekbar_time_3"
+               android:textColor="@color/white"
+               android:layout_gravity="center"
+               android:textSize="8dp"
+               android:layout_width="15dp"
+               android:layout_height="wrap_content"/>
+           <TextView
+               android:textColor="@color/white"
+               android:textSize="8dp"
+               android:gravity="center"
+               android:layout_width="5dp"
+               android:layout_height="wrap_content"
+               android:text=" : "/>
+           <TextView
+               android:gravity="center"
+               android:id="@+id/music_seekbar_time_4"
+               android:textColor="@color/white"
+               android:layout_marginRight="30dp"
+               android:textSize="8dp"
+               android:layout_width="15dp"
+               android:layout_height="wrap_content" />
+       </LinearLayout>
+
+        <ImageView
+            android:id="@+id/lyrics_play_pause"
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/start"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
+    </LinearLayout>
+</LinearLayout>
