--- a/app/src/main/res/layout/lyrics_item.xml
+++ b/app/src/main/res/layout/lyrics_item.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:orientation="vertical"
+    android:background="#00FFFFFF"
+    android:layout_height="50dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:textColor="#878787"
+        android:gravity="center"
+        android:textSize="13dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lyrics_item_1"/>
+    <TextView
+        android:id="@+id/lyrics_item_2"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="10dp"
+        android:textColor="#707070"/>
+
+
+</LinearLayout>
