--- a/app/src/main/res/layout/page_found_fragment.xml
+++ b/app/src/main/res/layout/page_found_fragment.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="#F5F5F5"
     android:overScrollMode="never"
@@ -65,10 +67,12 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
        <androidx.recyclerview.widget.RecyclerView
+           android:layout_marginTop="10dp"
+           android:layout_marginBottom="10dp"
+           android:overScrollMode="never"
            android:id="@+id/rv_recommend_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
-
 </LinearLayout>
 
 
@@ -87,79 +91,92 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="200dp"
+            android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/wonderful_playlist_1"
-                android:clickable="true"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/recommend_playlist_shape"
-                android:focusable="true" />
-            <TextView
-                android:id="@+id/home_page_found_wonderful_name_1"
+            <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10dp"
-                android:textColor="@color/black"/>
-        </LinearLayout>
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+                <ImageView
+                    android:id="@+id/wonderful_playlist_1"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/recommend_playlist_shape"
+                    android:clickable="true"
+                    android:focusable="true" />
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/wonderful_playlist_2"
-                android:clickable="true"
-                android:focusable="true"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/recommend_playlist_shape"/>
-            <TextView
-                android:id="@+id/home_page_found_wonderful_name_2"
+                <TextView
+                    android:id="@+id/home_page_found_wonderful_name_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:textColor="@color/black"
+                    android:textSize="10dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:id="@+id/linearLayout3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10dp"
-                android:textColor="@color/black"/>
-        </LinearLayout>
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/wonderful_playlist_3"
-                android:clickable="true"
-                android:focusable="true"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/recommend_playlist_shape"/>
-            <TextView
-                android:id="@+id/home_page_found_wonderful_name_3"
+                <ImageView
+                    android:id="@+id/wonderful_playlist_2"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/recommend_playlist_shape"
+                    android:clickable="true"
+                    android:focusable="true" />
+
+                <TextView
+                    android:id="@+id/home_page_found_wonderful_name_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:textColor="@color/black"
+                    android:textSize="10dp" />
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:id="@+id/linearLayout2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10dp"
-                android:textColor="@color/black"/>
-        </LinearLayout>
-        </LinearLayout>
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/linearLayout3"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/wonderful_playlist_3"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/recommend_playlist_shape"
+                    android:clickable="true"
+                    android:focusable="true" />
+
+                <TextView
+                    android:id="@+id/home_page_found_wonderful_name_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:textColor="@color/black"
+                    android:textSize="10dp" />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 
