--- a/app/src/main/res/layout/phone_password.xml
+++ b/app/src/main/res/layout/phone_password.xml
@@ -17,12 +17,27 @@
             android:layout_marginLeft="30dp"
             android:src="@drawable/exit" />
         <TextView
+            android:layout_gravity="center"
             android:textColor="@color/black"
             android:layout_marginLeft="20dp"
             android:textSize="17dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login_phone"/>
+
+        <LinearLayout
+            android:gravity="right"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <Button
+            android:layout_marginRight="20dp"
+            android:textColor="@color/black"
+            android:text="忘记密码"
+            android:background="@drawable/phone_password_login_shape"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:id="@+id/forget_possword"/>
+        </LinearLayout>
     </LinearLayout>
 
     <EditText
