--- a/app/src/main/res/layout/verification_fragment.xml
+++ b/app/src/main/res/layout/verification_fragment.xml
@@ -24,21 +24,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login_phone"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right|center">
-
-            <Button
-                android:id="@+id/phone_password_login"
-                android:layout_width="65dp"
-                android:layout_height="26dp"
-                android:layout_marginRight="17dp"
-                android:background="@drawable/phone_password_login_shape"
-                android:text="密码登录"
-                android:textSize="13dp" />
-        </LinearLayout>
     </LinearLayout>
 
     <TextView
@@ -61,7 +46,7 @@
         android:layout_height="wrap_content"
         android:text="已发送至"/>
     <TextView
-        android:text="+86 176****9088"
+        android:id="@+id/phone_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -70,12 +55,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
+            android:id="@+id/get_again"
             android:layout_marginRight="30dp"
             android:text="重新获取"
             android:textColor="#517DAD"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"/>
+
     </LinearLayout>
     </LinearLayout>
 
@@ -126,25 +113,7 @@
             android:textSize="30dp"
             android:layout_width="40dp"
             android:layout_height="wrap_content"/>
-        <EditText
-            android:inputType="number"
-            android:maxLength="1"
-            android:id="@+id/e5"
-            android:maxLines="1"
-            android:layout_marginRight="20dp"
-            android:gravity="center"
-            android:textSize="30dp"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"/>
-        <EditText
-            android:inputType="number"
-            android:maxLength="1"
-            android:id="@+id/e6"
-            android:maxLines="1"
-            android:gravity="center"
-            android:textSize="30dp"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
 
