--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -1,9 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    android:layout_marginTop="-25dp"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".activity.CommentsActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:layout_weight="1"
+        android:layout_marginTop="20dp"
+        android:id="@+id/activity_comment_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+      <TextView
+          android:textSize="25dp"
+          android:textColor="@color/black"
+          android:layout_marginLeft="20dp"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="评论:"/>
+      <ImageView
+          android:layout_width="40dp"
+          android:layout_height="40dp"
+          android:id="@+id/activity_commend_song_photo"
+          android:layout_marginLeft="20dp"/>
+
+      <TextView
+          android:ellipsize="end"
+          android:singleLine="true"
+          android:id="@+id/activity_commend_song_name"
+          android:textSize="18dp"
+          android:textColor="@color/black"
+          android:layout_marginLeft="10dp"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
+
+    </androidx.appcompat.widget.Toolbar>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_weight="11"
+        android:orientation="vertical"
+        android:scrollbars="vertical"
+        android:overScrollMode="never"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/activity_commend_commend_rv"/>
+
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <EditText
+            android:id="@+id/send_commend_edit"
+            android:paddingLeft="20dp"
+            android:hint="随乐而起，有感而发"
+            android:background="@null"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="6"/>
+        <TextView
+            android:textColor="#CFCFCF"
+            android:clickable="true"
+            android:id="@+id/send_commend_te"
+            android:gravity="center"
+            android:textSize="15dp"
+            android:text="发送"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:focusable="true" />
+    </LinearLayout>
+
+
+
+  </LinearLayout>
