--- a/app/src/main/res/layout/activity_playlist_song.xml
+++ b/app/src/main/res/layout/activity_playlist_song.xml
@@ -77,6 +77,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:overScrollMode="never"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
