修复了一些小bug，并且修改了登出

--- a/app/src/main/res/layout/phone_password.xml
+++ b/app/src/main/res/layout/phone_password.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     android:layout_height="match_parent">
@@ -46,6 +47,7 @@
         android:layout_marginTop="70dp"
         android:id="@+id/phone_password_edit"
         android:inputType="textPassword"
+        app:hintAnimationEnabled="true"
         android:textColorHint="#CCCCCC"
         android:hint="请输入密码"
         android:textCursorDrawable="@drawable/edit_cursor_color"
