--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -37,6 +37,7 @@
           android:textSize="18dp"
           android:textColor="@color/black"
           android:layout_marginLeft="10dp"
+          android:layout_marginRight="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
 
