--- a/app/src/main/res/layout/activity_lyrics.xml
+++ b/app/src/main/res/layout/activity_lyrics.xml
@@ -23,13 +23,14 @@
 
         <TextView
             android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:id="@+id/lyrics_toolbar_textView"
             android:ellipsize="end"
             android:singleLine="true"
             android:textSize="20dp"
             android:textColor="@color/white"
             android:layout_gravity="center"
-            android:layout_width="250dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"/>
 
     </androidx.appcompat.widget.Toolbar>
